--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.31.0
-scikit-learn==1.4.0
-numpy==1.24.3
-pandas==2.0.3
-matplotlib==3.7.2
-seaborn==0.12.2
-xgboost==2.0.3
+streamlit
+scikit-learn
+numpy
+pandas
+matplotlib
+seaborn
+xgboost
